<resources>
    <string name="app_name">Saguna Store</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_orders">My Orders</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="website">Website</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_rewards">My Rewards</string>
    <string name="username_or_email">Username/E-Mail</string>
    <string name="password">Password</string>
    <string name="email">E-Mail</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm-Password</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="register">Register</string>
    <string name="cart">Cart</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="forgot_password">Forgot Password??</string>
    <string name="phone_number">Phone Number</string>
    <string name="have_account">Have Account?Log In</string>
    <string name="forgot_your_password">Forgot Your Password???</string>
    <string name="reset_password">Reset Password</string>
    <string name="go_back_to_login">&lt; Go Back To Login</string>
    <string name="recover_email_sent">Recovery Email Sent Successfully</string>
    <string name="login">Login</string>
    <string name="title_activity_home_page">home_page</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_homepage">homepage</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
</resources>
