<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.LoginFrag">


        <ScrollView
        android:id="@+id/scrollViewLogin"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:fillViewport="true">
        <RelativeLayout
            android:id="@+id/loginRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:id="@+id/linearLayoutLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                >
                <!--logo-->
                <ImageView
                    android:id="@+id/logoname"
                    android:layout_width="350dp"
                    android:layout_height="100dp"
                    android:background="@drawable/main_logo"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    ></ImageView>
                <!--ProgressBar-->

                <ProgressBar
                    android:id="@+id/progressbar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    ></ProgressBar>
                <!--E-Mail-->
                <EditText
                    android:id="@+id/login_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/grey"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    />

                <!--Password-->
                <EditText
                    android:id="@+id/login_password"
                    android:inputType="textPassword"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/grey"
                    android:layout_gravity="center"
                    />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_rect_button"
                    ></Button>


                <TextView
                    android:id="@+id/forget_password_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    ></TextView>

                <TextView
                    android:id="@+id/dont_have_account_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't Have Account?? Sign-Up"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    ></TextView>


            </LinearLayout>

        </RelativeLayout>

        </ScrollView>



</FrameLayout>