<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ScrollView
        android:id="@+id/scrollViewLogin"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:fillViewport="true">
        <RelativeLayout
            android:id="@+id/loginRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:id="@+id/linearLayoutLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_centerInParent="true"
                >


                <ImageView
                    android:id="@+id/forgot_password_image"
                    android:layout_width="350dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:src="@drawable/forgot_password"
                    />

                <TextView
                    android:id="@+id/forgot_ur_password_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:text="@string/forgot_your_password"
                    android:textColor="@color/grey"
                    android:textSize="15dp"
                    />

                <TextView
                    android:id="@+id/dont_worry_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:text="Don't Worry We Just Need Your Email And It's Done !!!"
                    android:textColor="@color/grey"
                    />


                <EditText
                    android:id="@+id/forgot_password_email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <!--Linear Layout-->

                <LinearLayout
                    android:id="@+id/forgotPasswordLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/email_delivered_image"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:src="@drawable/email_delivered"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        android:layout_marginRight="10dp"
                        />

                    <ImageView
                        android:id="@+id/email_delivering_image"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:src="@drawable/email_going"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        android:layout_marginRight="10dp"
                        />

                    <TextView
                        android:id="@+id/message_textview_forgotpassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recover_email_sent"
                        android:visibility="gone"
                        android:textColor="@color/colorPrimary"
                        />


                </LinearLayout>

                <Button
                    android:id="@+id/reset_password_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_rect_button"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/reset_password"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:id="@+id/back_to_login_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/go_back_to_login"
                    android:textColor="@color/colorPrimary"
                    />


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>



</FrameLayout>